getting ready for claritmux tpm plugin, pulling out most color/style vars

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -92,66 +92,97 @@ if-shell '[ -x ~/.tmux/plugins/netj/tpm/tpm ]' \
 # Essential config, continued; also compensating plugin
 ###############################################################################
 
-### status bar and window/pane much easier
+# set -g @plugin 'netj/claritmux'  # TODO pull this section out into a tpm plugin
+### much clearer status bar with window (bell/activity/current/last) and also pane border
 # based on @89iuv's great config from https://github.com/catppuccin/tmux/discussions/317#discussioncomment-11064512
 # cf. https://github.com/tmux/tmux/wiki/Formats
 # cf. https://www.nerdfonts.com/cheat-sheet
 
-set -g status-position bottom
-set -g status-justify left  # or absolute-centre, right
-set -g status-style "bg=#{@thm_bg}"
+set -ogqF @claritmux_color_bg           '#{@thm_bg}'
+set -ogqF @claritmux_color_fg           '#{@thm_overlay_2}'
+set -ogqF @claritmux_color_separator    '#{@thm_overlay_0}'
+set -ogqF @claritmux_color_inactive     '#{@thm_overlay_0}'
+set -ogqF @claritmux_color_active       '#{@thm_green}'
+set -ogqF @claritmux_color_bell         '#{@thm_red}'
+set -ogqF @claritmux_color_prefix       '#{@thm_sky}'
+
+set -ogqF @claritmux_color_session      '#{@thm_surface_2}'
+set -ogqF @claritmux_color_path         '#{@thm_blue}'
+set -ogqF @claritmux_color_date         '#{@thm_yellow}'
+set -ogqF @claritmux_color_day          '#{@thm_peach}'
+set -ogqF @claritmux_color_time         '#{@thm_red}'
+set -ogqF @claritmux_color_timezone     '#{@thm_surface_1}'
+set -ogqF @claritmux_color_host         '#{@thm_surface_2}'
+
+set -gqF @claritmux_style_status                'bg=#{@claritmux_color_bg}'
+set -gqF @claritmux_style_status_separator      'bg=#{@claritmux_color_bg},fg=#{@claritmux_color_separator},none'
+set -gqF @claritmux_style_status_while_prefix   'bg=#{@claritmux_color_prefix},fg=#{@claritmux_color_bg},bold'
+set -gqF @claritmux_style_status_session        'bg=#{@claritmux_color_bg},fg=#{@claritmux_color_session}'
+set -gqF @claritmux_style_status_path           'bg=#{@claritmux_color_bg},fg=#{@claritmux_color_path}'
+set -gqF @claritmux_style_status_date           'bg=#{@claritmux_color_bg},fg=#{@claritmux_color_date}'
+set -gqF @claritmux_style_status_day            'bg=#{@claritmux_color_bg},fg=#{@claritmux_color_day}'
+set -gqF @claritmux_style_status_time           'bg=#{@claritmux_color_bg},fg=#{@claritmux_color_time}'
+set -gqF @claritmux_style_status_timezone       'bg=#{@claritmux_color_bg},fg=#{@claritmux_color_timezone}'
+set -gqF @claritmux_style_status_host           'bg=#{@claritmux_color_bg},fg=#{@claritmux_color_host}'
+set -gqF @claritmux_style_window_status         'bg=#{@claritmux_color_bg},fg=#{@claritmux_color_fg}'
+set -gqF @claritmux_style_window_separator      '#{}'
+set -gqF @claritmux_style_pane_active           'bg=#{@claritmux_color_bg},fg=#{@claritmux_color_active},bold'
+set -gqF @claritmux_style_pane_active_border    'bg=#{@claritmux_color_active},fg=#{@claritmux_color_active}'
+set -gqF @claritmux_style_pane_inactive         'bg=#{@claritmux_color_inactive},fg=#{@claritmux_color_bg}'
+set -gqF @claritmux_style_pane_inactive_border  'bg=#{@claritmux_color_bg},fg=#{@claritmux_color_inactive}'
+
+set -ogq status-position bottom
+set -ogq status-justify left  # or absolute-centre, right
 
 ## status left look and feel
-set -g status-left-length 100
+set -ogq status-left-length 100
+set -gF status-style "#{@claritmux_style_status}"
 set -g status-left ""
+set -ga status-left "#[#{@claritmux_style_status_session}]"
 # show prefix status
-set -ga status-left "#{?client_prefix,#{#[bg=#{@thm_red},fg=#{@thm_bg},bold]},#{#[bg=#{@thm_bg},fg=#{@thm_surface_2}]}}"
+set -ga status-left "#{?client_prefix,#{#[#{@claritmux_style_status_while_prefix}]},}"
 # show session
 set -ga status-left "  #{=/32/...:#{session_name}} "
-# set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]│"
-# # show zoom status dynamically
-# set -ga status-left "#{?window_zoomed_flag,#{#[bg=#{@thm_bg},fg=#{@thm_green}]}   #{#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]│},}"
-# # show title
-# set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_green},bold] #T "
 # last separator
-set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]│"
+set -ga status-left "#[#{@claritmux_style_status_separator}]│"
 
 ## status right look and feel
 set -g status-right-length 100
 set -g status-right ""
 # first separator
-set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]│"
+set -ga status-right "#[#{@claritmux_style_status_separator}]│"
 # show workdir
-set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_blue}]  #{=/-32/...:#{s|$HOME|~|:#{pane_current_path}}} "
-set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}, none]│"
+set -ga status-right "#[#{@claritmux_style_status_path}]  #{=/-32/...:#{s|$HOME|~|:#{pane_current_path}}} "
+set -ga status-right "#[#{@claritmux_style_status_separator}]│"
 # show time
 set -ga status-right " "
-set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_yellow}]󰭦 %Y-%m-%d"
-set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_peach}] %a "
-set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_red}]󰅐 %H:%M:%S #[fg=#{@thm_surface_1}]%Z"
+set -ga status-right "#[#{@claritmux_style_status_date}]󰭦 %Y-%m-%d"
+set -ga status-right "#[#{@claritmux_style_status_day}] %a "
+set -ga status-right "#[#{@claritmux_style_status_time}]󰅐 %H:%M:%S"
+set -ga status-right "#[#{@claritmux_style_status_timezone}] %Z"
 set -g  status-interval 1
 set -ga status-right " "
-set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}, none]│"
+set -ga status-right "#[#{@claritmux_style_status_separator}]│"
 # show host
-set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_surface_2}] 󰒍 #h "
+set -ga status-right "#[#{@claritmux_style_status_host}] 󰒍 #h "
 
 # window look and feel
 set -wg automatic-rename on
 set -g automatic-rename-format "..."
 set -g window-status-format         " #I:#{?#{!=:#W,...}, #W, #{=/-32/...:#{b:pane_current_path}}} "
 set -g window-status-current-format " #I:#{?#{!=:#W,...}, #W, #{=/-32/...:#{b:pane_current_path}}} "
-set -g window-status-style          "bg=#{@thm_bg},fg=#{@thm_overlay_2}"
-set -g window-status-current-style  "bg=#{@thm_green},fg=#{@thm_bg},bold"
-set -g window-status-last-style     "bg=#{@thm_bg},fg=#{@thm_green},bold"
-set -g window-status-activity-style "blink"
-set -g window-status-bell-style     "bg=#{@thm_red},blink,fg=#{@thm_bg},blink"
-set -gF window-status-separator     "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}]│#[default]"
+set -gF window-status-style          "#{@claritmux_style_window_status}"
+set -gF window-status-current-style  "bg=#{@claritmux_color_active},fg=#{@claritmux_color_bg},bold"
+set -gF window-status-last-style     "bg=#{@claritmux_color_bg},fg=#{@claritmux_color_active},bold"
+set -gF window-status-activity-style "blink"
+set -gF window-status-bell-style     "bg=#{@claritmux_color_bell},blink,fg=#{@claritmux_color_bg},blink"
+set -gF window-status-separator     "#[#{@claritmux_style_status_separator}]│#[default]"
 
 # pane border look and feel
 setw -g pane-border-status top
 setw -g  pane-border-format ""
 # TODO show zoom status and title when zoomed or only one pane
-setw -ga pane-border-format "#{?pane_active,#{#[bg=#{@thm_bg},fg=#{@thm_green},bold]},#{#[bg=#{@thm_overlay_0},fg=#{@thm_bg}]}}"
+setw -ga pane-border-format "#{?pane_active,#{#[#{@claritmux_style_pane_active}]},#{#[#{@claritmux_style_pane_inactive}]}}"
 setw -ga pane-border-format " "
 setw -ga pane-border-format "#{?window_zoomed_flag,  ,}"
 setw -ga pane-border-format " #P: #{pane_current_command} "
@@ -159,9 +190,10 @@ setw -ga pane-border-format "│"
 setw -ga pane-border-format " #T "
 setw -ga pane-border-format " "
 setw -ga pane-border-format "#[default]"
-setw -g pane-active-border-style "bg=#{@thm_green},fg=#{@thm_green}"
-setw -g pane-border-style        "bg=#{@thm_bg},fg=#{@thm_overlay_0}"
+setw -gF pane-active-border-style "#{@claritmux_style_pane_active_border}"
+setw -gF pane-border-style        "#{@claritmux_style_pane_inactive_border}"
 setw -g pane-border-lines single
+
 
 ## easier session/window actions
 unbind ^D; bind ^D detach           # easier detach w/ Ctrl
