claritmux window named vs unnamed formats

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -125,11 +125,13 @@ set -gqF @claritmux_style_status_time           'bg=#{@claritmux_color_bg},fg=#{
 set -gqF @claritmux_style_status_timezone       'bg=#{@claritmux_color_bg},fg=#{@claritmux_color_timezone}'
 set -gqF @claritmux_style_status_host           'bg=#{@claritmux_color_bg},fg=#{@claritmux_color_host}'
 set -gqF @claritmux_style_window_status         'bg=#{@claritmux_color_bg},fg=#{@claritmux_color_fg}'
-set -gqF @claritmux_style_window_separator      '#{}'
 set -gqF @claritmux_style_pane_active           'bg=#{@claritmux_color_bg},fg=#{@claritmux_color_active},bold'
 set -gqF @claritmux_style_pane_active_border    'bg=#{@claritmux_color_active},fg=#{@claritmux_color_active}'
 set -gqF @claritmux_style_pane_inactive         'bg=#{@claritmux_color_inactive},fg=#{@claritmux_color_bg}'
 set -gqF @claritmux_style_pane_inactive_border  'bg=#{@claritmux_color_bg},fg=#{@claritmux_color_inactive}'
+
+set -gq  @claritmux_format_window_named         ' #{=/24/...:#{window_name}}'
+set -gq  @claritmux_format_window_unnamed       ' #{=/-24/...:#{b:pane_current_path}}'
 
 set -ogq status-position bottom
 set -ogq status-justify left  # or absolute-centre, right
@@ -168,15 +170,15 @@ set -ga status-right "#[#{@claritmux_style_status_host}] 󰒍 #h "
 
 # window look and feel
 set -wg automatic-rename on
-set -g automatic-rename-format "..."
-set -g window-status-format         " #I:#{?#{!=:#W,...}, #W, #{=/-32/...:#{b:pane_current_path}}} "
-set -g window-status-current-format " #I:#{?#{!=:#W,...}, #W, #{=/-32/...:#{b:pane_current_path}}} "
+set -g automatic-rename-format ""
+set -gF window-status-format         " ##I:##{?##{!=:##{window_name},},#{@claritmux_format_window_named},#{@claritmux_format_window_unnamed}} "
+set -gF window-status-current-format " ##I:##{?##{!=:##{window_name},},#{@claritmux_format_window_named},#{@claritmux_format_window_unnamed}} "
+set -gF window-status-separator      "#[#{@claritmux_style_status_separator}]│#[default]"
 set -gF window-status-style          "#{@claritmux_style_window_status}"
 set -gF window-status-current-style  "bg=#{@claritmux_color_active},fg=#{@claritmux_color_bg},bold"
 set -gF window-status-last-style     "bg=#{@claritmux_color_bg},fg=#{@claritmux_color_active},bold"
 set -gF window-status-activity-style "blink"
 set -gF window-status-bell-style     "bg=#{@claritmux_color_bell},blink,fg=#{@claritmux_color_bg},blink"
-set -gF window-status-separator     "#[#{@claritmux_style_status_separator}]│#[default]"
 
 # pane border look and feel
 setw -g pane-border-status top
