tmux bootstraps tpm

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -77,16 +77,18 @@ set -g @catppuccin_window_status_style "none"
 set -g @catppuccin_pane_status_enabled "yes"
 set -g @catppuccin_pane_border_status "yes"
 
-## Initialize TPM (keep this before local config sourcing)
-# TODO move from .dotfiles/install
-## bootstrap tpm
-#if "test ! -d ~/.tmux/plugins/tpm" \
-#   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
-# XXX using my fork netj/tpm for now; TODO switch back to tmux-plugins/tpm once merging outstanding improvements
-set -g @plugin 'netj/tpm'
-if-shell '[ -x ~/.tmux/plugins/netj/tpm/tpm ]' \
-    "run '~/.tmux/plugins/netj/tpm/tpm'" \
-    "source ~/.tmux-basic.conf"
+## Bootstrap/Initialize TPM (keep this before local config sourcing)
+set -g @tpm 'netj/tpm'  # XXX using my fork netj/tpm for now; TODO switch back to tmux-plugins/tpm once merging outstanding improvements
+set -gF @plugin '#{@tpm}'
+# debug with: set -x; exec &>/tmp/tpm.log
+run 'set -eu; \
+    tpm=$(tmux show -gv @tpm); \
+    [[ -x ~/.tmux/plugins/$tpm/tpm ]] || { \
+        git clone https://github.com/$tpm ~/.tmux/plugins/$tpm; \
+        tmux setenv -g TMUX_PLUGIN_MANAGER_PATH ~/.tmux/plugins; \
+        ~/.tmux/plugins/$tpm/bin/install_plugins; \
+    }; \
+    ~/.tmux/plugins/$tpm/tpm'
 
 ###############################################################################
 # Essential config, continued; also compensating plugin
