spun off tpm netj/claritmux plugin

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -69,13 +69,30 @@ set -g @resurrect-capture-pane-contents 'on'
 # Catppuccin theme works slightly better than dracula
 set -g @plugin 'catppuccin/tmux'
 # set -g @catppuccin_flavor "macchiato"
-set -g @catppuccin_flavor "mocha"
+# set -g @catppuccin_flavor "mocha"
 # set -g @catppuccin_flavor "latte"
-# set -g @catppuccin_flavor "frappe"
+set -g @catppuccin_flavor "frappe"
 set -g @catppuccin_status_background "none"
 set -g @catppuccin_window_status_style "none"
 set -g @catppuccin_pane_status_enabled "yes"
 set -g @catppuccin_pane_border_status "yes"
+
+set -g @plugin 'netj/claritmux'
+# using Catppuccin colors for now
+set -gF @claritmux_color_bg           '#{@thm_bg}'
+set -gF @claritmux_color_fg           '#{@thm_overlay_2}'
+set -gF @claritmux_color_separator    '#{@thm_overlay_0}'
+set -gF @claritmux_color_inactive     '#{@thm_overlay_0}'
+set -gF @claritmux_color_active       '#{@thm_green}'
+set -gF @claritmux_color_bell         '#{@thm_red}'
+set -gF @claritmux_color_prefix       '#{@thm_sky}'
+set -gF @claritmux_color_session      '#{@thm_surface_2}'
+set -gF @claritmux_color_path         '#{@thm_blue}'
+set -gF @claritmux_color_date         '#{@thm_yellow}'
+set -gF @claritmux_color_day          '#{@thm_peach}'
+set -gF @claritmux_color_time         '#{@thm_red}'
+set -gF @claritmux_color_timezone     '#{@thm_surface_1}'
+set -gF @claritmux_color_host         '#{@thm_surface_2}'
 
 ## Bootstrap/Initialize TPM (keep this before local config sourcing)
 set -g @tpm 'netj/tpm'  # XXX using my fork netj/tpm for now; TODO switch back to tmux-plugins/tpm once merging outstanding improvements
@@ -93,111 +110,6 @@ run 'set -eu; \
 ###############################################################################
 # Essential config, continued; also compensating plugin
 ###############################################################################
-
-# set -g @plugin 'netj/claritmux'  # TODO pull this section out into a tpm plugin
-### much clearer status bar with window (bell/activity/current/last) and also pane border
-# based on @89iuv's great config from https://github.com/catppuccin/tmux/discussions/317#discussioncomment-11064512
-# cf. https://github.com/tmux/tmux/wiki/Formats
-# cf. https://www.nerdfonts.com/cheat-sheet
-
-set -ogqF @claritmux_color_bg           '#{@thm_bg}'
-set -ogqF @claritmux_color_fg           '#{@thm_overlay_2}'
-set -ogqF @claritmux_color_separator    '#{@thm_overlay_0}'
-set -ogqF @claritmux_color_inactive     '#{@thm_overlay_0}'
-set -ogqF @claritmux_color_active       '#{@thm_green}'
-set -ogqF @claritmux_color_bell         '#{@thm_red}'
-set -ogqF @claritmux_color_prefix       '#{@thm_sky}'
-
-set -ogqF @claritmux_color_session      '#{@thm_surface_2}'
-set -ogqF @claritmux_color_path         '#{@thm_blue}'
-set -ogqF @claritmux_color_date         '#{@thm_yellow}'
-set -ogqF @claritmux_color_day          '#{@thm_peach}'
-set -ogqF @claritmux_color_time         '#{@thm_red}'
-set -ogqF @claritmux_color_timezone     '#{@thm_surface_1}'
-set -ogqF @claritmux_color_host         '#{@thm_surface_2}'
-
-set -gqF @claritmux_style_status                'bg=#{@claritmux_color_bg}'
-set -gqF @claritmux_style_status_separator      'bg=#{@claritmux_color_bg},fg=#{@claritmux_color_separator},none'
-set -gqF @claritmux_style_status_while_prefix   'bg=#{@claritmux_color_prefix},fg=#{@claritmux_color_bg},bold'
-set -gqF @claritmux_style_status_session        'bg=#{@claritmux_color_bg},fg=#{@claritmux_color_session}'
-set -gqF @claritmux_style_status_path           'bg=#{@claritmux_color_bg},fg=#{@claritmux_color_path}'
-set -gqF @claritmux_style_status_date           'bg=#{@claritmux_color_bg},fg=#{@claritmux_color_date}'
-set -gqF @claritmux_style_status_day            'bg=#{@claritmux_color_bg},fg=#{@claritmux_color_day}'
-set -gqF @claritmux_style_status_time           'bg=#{@claritmux_color_bg},fg=#{@claritmux_color_time}'
-set -gqF @claritmux_style_status_timezone       'bg=#{@claritmux_color_bg},fg=#{@claritmux_color_timezone}'
-set -gqF @claritmux_style_status_host           'bg=#{@claritmux_color_bg},fg=#{@claritmux_color_host}'
-set -gqF @claritmux_style_window_status         'bg=#{@claritmux_color_bg},fg=#{@claritmux_color_fg}'
-set -gqF @claritmux_style_pane_active           'bg=#{@claritmux_color_bg},fg=#{@claritmux_color_active},bold'
-set -gqF @claritmux_style_pane_active_border    'bg=#{@claritmux_color_active},fg=#{@claritmux_color_active}'
-set -gqF @claritmux_style_pane_inactive         'bg=#{@claritmux_color_inactive},fg=#{@claritmux_color_bg}'
-set -gqF @claritmux_style_pane_inactive_border  'bg=#{@claritmux_color_bg},fg=#{@claritmux_color_inactive}'
-
-set -gq  @claritmux_format_window_named         ' #{=/24/...:#{window_name}}'
-set -gq  @claritmux_format_window_unnamed       ' #{=/-24/...:#{b:pane_current_path}}'
-
-set -ogq status-position bottom
-set -ogq status-justify left  # or absolute-centre, right
-
-## status left look and feel
-set -ogq status-left-length 100
-set -gF status-style "#{@claritmux_style_status}"
-set -g status-left ""
-set -ga status-left "#[#{@claritmux_style_status_session}]"
-# show prefix status
-set -ga status-left "#{?client_prefix,#{#[#{@claritmux_style_status_while_prefix}]},}"
-# show session
-set -ga status-left "  #{=/32/...:#{session_name}} "
-# last separator
-set -ga status-left "#[#{@claritmux_style_status_separator}]│"
-
-## status right look and feel
-set -g status-right-length 100
-set -g status-right ""
-# first separator
-set -ga status-right "#[#{@claritmux_style_status_separator}]│"
-# show workdir
-set -ga status-right "#[#{@claritmux_style_status_path}]  #{=/-32/...:#{s|$HOME|~|:#{pane_current_path}}} "
-set -ga status-right "#[#{@claritmux_style_status_separator}]│"
-# show time
-set -ga status-right " "
-set -ga status-right "#[#{@claritmux_style_status_date}]󰭦 %Y-%m-%d"
-set -ga status-right "#[#{@claritmux_style_status_day}] %a "
-set -ga status-right "#[#{@claritmux_style_status_time}]󰅐 %H:%M:%S"
-set -ga status-right "#[#{@claritmux_style_status_timezone}] %Z"
-set -g  status-interval 1
-set -ga status-right " "
-set -ga status-right "#[#{@claritmux_style_status_separator}]│"
-# show host
-set -ga status-right "#[#{@claritmux_style_status_host}] 󰒍 #h "
-
-# window look and feel
-set -wg automatic-rename on
-set -g automatic-rename-format ""
-set -gF window-status-format         " ##I:##{?##{!=:##{window_name},},#{@claritmux_format_window_named},#{@claritmux_format_window_unnamed}} "
-set -gF window-status-current-format " ##I:##{?##{!=:##{window_name},},#{@claritmux_format_window_named},#{@claritmux_format_window_unnamed}} "
-set -gF window-status-separator      "#[#{@claritmux_style_status_separator}]│#[default]"
-set -gF window-status-style          "#{@claritmux_style_window_status}"
-set -gF window-status-current-style  "bg=#{@claritmux_color_active},fg=#{@claritmux_color_bg},bold"
-set -gF window-status-last-style     "bg=#{@claritmux_color_bg},fg=#{@claritmux_color_active},bold"
-set -gF window-status-activity-style "blink"
-set -gF window-status-bell-style     "bg=#{@claritmux_color_bell},blink,fg=#{@claritmux_color_bg},blink"
-
-# pane border look and feel
-setw -g pane-border-status top
-setw -g  pane-border-format ""
-# TODO show zoom status and title when zoomed or only one pane
-setw -ga pane-border-format "#{?pane_active,#{#[#{@claritmux_style_pane_active}]},#{#[#{@claritmux_style_pane_inactive}]}}"
-setw -ga pane-border-format " "
-setw -ga pane-border-format "#{?window_zoomed_flag,  ,}"
-setw -ga pane-border-format " #P: #{pane_current_command} "
-setw -ga pane-border-format "│"
-setw -ga pane-border-format " #T "
-setw -ga pane-border-format " "
-setw -ga pane-border-format "#[default]"
-setw -gF pane-active-border-style "#{@claritmux_style_pane_active_border}"
-setw -gF pane-border-style        "#{@claritmux_style_pane_inactive_border}"
-setw -g pane-border-lines single
-
 
 ## easier session/window actions
 unbind ^D; bind ^D detach           # easier detach w/ Ctrl
